# AccuracyBounds

./: .gitignore  README.md  pyproject.toml
.github/workflows/: doc.yml  pdoc.yml  python-app.yml  python-publish.yml
docs/: accuracy_bounds.html  index.html  search.js
docs/accuracy_bounds/: inverseproblems.html
examples/: SR_big_computations.py  dataloader.ipynb  dataloader.py  example_001.ipynb  example_fscm.ipynb  example_linalg.ipynb  example_linearforwardmodelonball.ipynb  example_localizationmicroscopy.ipynb  visualizations.py
examples/S2_SR/: Kernelsize_computations.py  S2_SR_data.py  SR_big_computations.py  classif_dataset.json  experiments.py  op_testing.py  utils.py
examples/data/linear_algebra_examples/: dataset_generator.py
examples/data/sr_multispectral_satellite_data/: sentinel2.py
examples/flourescencemicroscopy/data_S2/: example_001.mat  example_002.mat  example_003.mat  example_004.mat  example_005.mat  example_006.mat  example_007.mat  example_008.mat  example_009.mat  example_010.mat  example_011.mat  example_012.mat  example_013.mat  (+12 more)
src/: __init__.py
src/examples/: example_001.ipynb
src/inverseproblems/: kersize_compute.py  utils.py  utils_data.py
src/project_name/: functions.py
src/utils/: utils.py
test/: test_dummy.py  test_toy_example_cuda.py  test_toy_example_np.py  test_toy_example_torch.py  tests_planned
test/S2_SR/: SR_big_computations.py  experiments.ipynb  experiments.py  kersize_computation.py  op_testing.py  testing.py
test/playground/: comput_3D_temp.py  generator_functions.py  testing.ipynb  visualizations.py
(+230 files in other folders)
